# aiohttp-openmetrics

./: .gitignore  README.md  README.rst  TODO  disperse.conf  disperse.toml  pyproject.toml  releaser.conf  setup.cfg  setup.py
.github/workflows/: disperse.yml  pythonpackage.yml
aiohttp_openmetrics/: __init__.py
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
