[metadata]
name = aiohttp-openmetrics
description = OpenMetrics provider for aiohttp
long_description = file:README.rst
version = attr:aiohttp_openmetrics
author = Jelmer Vernooij
author_email = jelmer@jelmer.uk
license = Apache v2 or later
url = https://github.com/jelmer/aiohttp-openmetrics/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
install_requires =
    aiohttp
    prometheus_client
packages = aiohttp_openmetrics

[mypy]
ignore_missing_imports = True

[metadata]
name = aiohttp-openmetrics
description = "OpenMetrics provider for aiohttp"
long_description = file:README.rst
version = attr:aiohttp_openmetrics.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
license = Apache v2 or later
url = https://github.com/jelmer/aiohttp-openmetrics/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[options]
packages = find:
install_requires =
    aiohttp
    prometheus_client

[bdist_wheel]
universal = 1
