[metadata]
name = aiohttp-openmetrics
description = OpenMetrics provider for aiohttp
long_description = file:README.rst
version = attr:aiohttp_openmetrics.__version__
author = Jelmer Vernooĳ
author_email = jelmer@jelmer.uk
license = Apache v2 or later
url = https://github.com/jelmer/aiohttp-openmetrics/
project_urls =
    Repository=https://github.com/jelmer/aiohttp-openmetrics
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX

[mypy]
# prometheus_client doesn't provide type hints
ignore_missing_imports = True

[options]
install_requires =
    aiohttp
    prometheus_client
packages = aiohttp_openmetrics

[options.package_data]
* = py.typed

[bdist_wheel]
universal = 1
